recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:6: error: not found: value lenth
		avance(lenth);
                       ^